plugins {
	id 'fabric-loom' version '1.2-SNAPSHOT'
	id 'maven-publish'
	id 'com.github.johnrengelman.shadow' version '7.1.2'
	id 'java'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

	// GeckoLib
	maven {
		name = "GeckoLib"
		url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
	}

	mavenCentral()
}

configurations {
	// extends the shadowJar configuration
	shadowMe
	// have implemented dependencies automatically embedded in the final jar
	implementation.extendsFrom(shadowMe)

	customModule
	implementation.extendsFrom(customModule)

	if (isMinecraftSubProject) {
		// Shadow common
		common
		shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
		compileClasspath.extendsFrom common
		runtimeClasspath.extendsFrom common
		developmentForge.extendsFrom common
	}


	addModJar
	include.extendsFrom addModJar
	modImplementation.extendsFrom addModJar
}

dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	addModJar "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// GeckoLib
	addModJar "software.bernie.geckolib:geckolib-fabric-1.19:${project.geckolib_version}"
}

shadowJar {
	configurations = [project.configurations.shadowCommon, project.configurations.shadowMe, project.configurations.customModule]

	exclude 'software/bernie/example/**'
	exclude 'assets/geckolib3/**'
	exclude '**/*.java'

	relocate 'software.bernie.geckolib', 'lasertag.shadowed.software.bernie.geckolib'
	relocate 'software.bernie.shadowed', 'lasertag.shadowed.software.bernie.shadowed'

	mergeServiceFiles()
}

remapJar {
	inputs.file shadowJar.archiveFile
	dependsOn shadowJar
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("COPYING") {
		rename { "${it}_${base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

loom {
	accessWidenerPath = file("src/main/resources/lasertag.accesswidener")
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}